# hackathon-corecraft

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/routers/: api.py  ws.py
backend/app/services/: price.py  rpc.py  tx_tracker.py  zmq_listener.py
firmware/: main.ino  platformio.ini
firmware/include/: config.h  secrets.h  secrets.h.example
firmware/src/: display.cpp  display.h  main.cpp  net.cpp  net.h  tracker.cpp  tracker.h  web.cpp  web.h
