[project]
name = "btc-esp-backend"
version = "0.1.0"
description = "FastAPI proxy for bitcoind ZMQ/RPC + CoinGecko for ESP8266 firmware"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.6.0",
    "pyzmq>=26.0.0",
    "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
